add export gmdl file, root can make reconstrution of detector, make detector visualble, but still remain some memeory bug when try to move the eye angle

--- a/sim_deuteron/Makefile
+++ b/sim_deuteron/Makefile
@@ -13,6 +13,20 @@ CXXFLAGS	+= -O3 -fPIC
 LDFLAGS		+= $(shell root-config --ldflags) $(filter-out std=%,$(shell geant4-config --cflags))
 ROOTLIBS	 = $(shell root-config --glibs) -ltbb
 G4LIBS		 = $(shell geant4-config --libs)
+# 检查是否有 GDML 支持并添加库
+# 检查 Xerces-C 库位置
+XERCES_LIB = $(shell pkg-config --libs xerces-c 2>/dev/null || echo "-L/usr/local/lib -lxerces-c")
+XERCES_INC = $(shell pkg-config --cflags xerces-c 2>/dev/null || echo "-I/usr/local/include")
+
+CPPFLAGS	+= -Iinclude -I$(G4SMLIBDIR)/include -I$(TARTSYS)/include -I$(G4INCLUDE) \
+               -I$(ROOTSYS)/include $(XERCES_INC)
+
+# G4LIBS 包含 GDML 和 Xerces
+G4LIBS		 = $(shell geant4-config --libs)
+
+# 添加 Xerces 库到链接命令
+LDLIBS		+= $(G4SMLDLIBS) $(TARTLIBS) $(ROOTLIBS) $(G4LIBS) $(XERCES_LIB)
+
 TARTLIBS	 = -L$(TARTSYS)/lib -lanasamurai -lanabrips -lanacore -lXMLParser
 LDLIBS		+= $(G4SMLDLIBS) $(TARTLIBS) $(ROOTLIBS) $(G4LIBS)
 
