--- a/sources/smg4lib/CMakeLists.txt
+++ b/sources/smg4lib/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(smg4)
 
+# Build data first as other modules depend on it
+add_subdirectory(data)
 add_subdirectory(action)
 add_subdirectory(construction)
-add_subdirectory(data)
 add_subdirectory(physics)
