--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(${Geant4_INCLUDE_DIRS})
 if(DEFINED ENV{TARTSYS})
   message(STATUS "Found ANAROOT, TARTSYS = " $ENV{TARTSYS})
   include_directories($ENV{TARTSYS}/include)
+  link_directories($ENV{TARTSYS}/lib)
   set(ANAROOT_LIBRARIES anasamurai anabrips anacore XMLParser)
 else()
   message(FATAL_ERROR "$TARTSYS is not defined. please define the environment for ANAROOT.")
