--- a/sources/smg4lib/action/CMakeLists.txt
+++ b/sources/smg4lib/action/CMakeLists.txt
@@ -5,9 +5,16 @@ file(GLOB INC_FILES "include/*.hh")
 
 add_library(smaction SHARED ${SRC_FILES})
 
-target_include_directories(smaction PUBLIC include)
+target_include_directories(smaction PUBLIC 
+    include
+    ../include
+    ../data/include
+)
 
-target_link_libraries(smaction PUBLIC ${Geant4_LIBRARIES})
+target_link_libraries(smaction PUBLIC 
+    ${Geant4_LIBRARIES}
+    smdata
+)
 
 install(FILES ${INC_FILES} DESTINATION include)
 install(TARGETS smaction
