--- a/libs/smg4lib/CMakeLists.txt
+++ b/libs/smg4lib/CMakeLists.txt
@@ -7,7 +7,7 @@ project(smg4lib)
 # 子模块库
 ##############################################################################
 
-# 先构建 data（其他模块依赖它）
+# 构建 data（其他模块依赖它）
 add_subdirectory(src/data)
 
 # 构建其他模块
