Remove data/ directory from Git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,7 @@ __pycache__/
 .pytest_cache/
 
 # Data files (too large for git)
-data/simulation/*.root
-data/reconstruction/*.root
+data/
 *.dat
 *.root
 
