substitute the cout cerr by smlogger

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -13,4 +13,7 @@ add_subdirectory(sim_deuteron_core)
 # 构建分析库（可选）
 if(BUILD_ANALYSIS)
     add_subdirectory(analysis)
+    
+    # 构建几何接受度分析库（依赖analysis库）
+    add_subdirectory(geo_accepentce)
 endif()
