use micromamba to manage pacakege

--- a/.envrc
+++ b/.envrc
@@ -1,14 +1,12 @@
-# Auto-generated .envrc for Dpol_smsimulator
-# This file will be executed by direnv when you cd into the project root.
-# Ensure micromamba is initialized in this shell (zsh) before using `micromamba activate`.
-# Keep this file small and review before allowing with `direnv allow`.
-
-# Initialize micromamba shell hook for zsh (direnv runs this file with your login shell)
+# 1. 初始化 micromamba 的 shell 挂钩 (保持你原有的)
 if command -v micromamba >/dev/null 2>&1; then
-  eval "$(micromamba shell hook --shell zsh)"
+    eval "$(micromamba shell hook --shell zsh)"
 fi
 
-# Source the project setup which performs activation and exports variables
-if [[ -f ./setup_spana.sh ]]; then
-  source ./setup_spana.sh
+# 2. 【新增】这里是关键！显式激活你的环境
+micromamba activate anaroot-env
+
+# 3. 加载项目设置 (保持你原有的，通常用于设置 Geant4 数据路径等)
+if [[ -f ./setup.sh ]]; then
+    source ./setup.sh
 fi
