add .cache in gitignore, add cmake_export_compile_commands in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 project(SMSimulator VERSION 5.5 LANGUAGES CXX)
 
 # 设置 C++ 标准
